Add funding pipeline overview to the dashboard (#274)
* add overview fixes for pipelines

* fix tests

* fix dashboard and tests

* fix tests

* fix docker build image

* show only active pipelines
